Fix button alignment in Firefox

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -442,7 +442,7 @@ a:hover, a:focus
     color: lighten($bg, 50%)
     border-radius: 4px
     height: 26px
-    line-height: 24px
+    line-height: 22px
     font-size: 0.9em
     transition: all 100ms linear
 
